--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Document</title>
+  <title>Guess the Password</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -18,6 +18,7 @@
     </pre>
     <p>Given a list of potential passwords, try to guess the correct one.</p>
     <p>If you're wrong, we'll tell you how many letters are correct.</p>
+    <p>C'mon give it a try!</p>
     <button id="start">Start</button>
   </div>
   <div id="game-screen" class="hide">
